--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-modal": "^11.5.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
